canvas size overflow bug fix

--- a/css/index.css
+++ b/css/index.css
@@ -108,6 +108,8 @@ body
     padding: 0;
     width: 100%;
     height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 /*    background-color: yellow;*/
 }
 
